temp code, will refactor in next commit

--- a/web-ui/public/manifest.json
+++ b/web-ui/public/manifest.json
@@ -1,6 +1,7 @@
 {
     "short_name": "PP",
     "name": "Kuch Bhi Experiments",
+    "description": "some experiments",
     "icons": [{
         "src": "/images/logo.png",
         "type": "image/png",
